fix overflow issue on homepage

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@
     body {
         @apply tracking-wide bg-slate-200 text-slate-800;
         background: black;
+        overflow-x: hidden !important;
     }
 
     h1,
@@ -86,7 +87,7 @@
 .area {
     width: 100%;
     height: 100vh;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
 }
 
 .circles {
@@ -95,7 +96,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow: hidden !important;
 }
 
 .circles li {
@@ -151,6 +152,7 @@
     animation-duration: 10s;
 }
 
+/* E */
 .circles li:nth-child(6) {
     left: 75%;
     width: 110px;
@@ -195,6 +197,7 @@
     animation-duration: 16s;
     background: blue;
 }
+/* Z */
 
 .circles li:nth-child(11) {
     left: 85%;
